Added link to github

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
    
 
     <footer>Coded by Irena Ternovets <br>
-        <a href="#">Open-source</a>
+        <a href="https://github.com/IreneTernovets/weather-app">Open-source</a>
     </footer>
    </div> 
    <script src="/app.js"></script>
